# XML2CSV

./: LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
database/: ALIQUOTA.csv  NCM.csv
input/: NFE. Entradas. 41220476102839000526550100000410271000011535-nfe.xml  NFe_648465165651651651.xml
src/: utils.py
